@@ -1,3 +1,7 @@
+procps-ng-NEXT
+---------------
+  * Rename pwait to pidwait
+
 procps-ng-3.3.17
 ---------------
   * library: Incremented to 8:3:0
